<resources>
    <string name="app_name">Quản Lý Chấm Công</string>
    <string name="title">quản lí chấm công</string>
    <string name="workers">công nhân</string>
    <string name="timekeeping">chấm công</string>
    <string name="timesheets">danh sách chấm công</string>
    <string name="products">sản phẩm</string>

    <string name="tv_id_employee">Mã:</string>
    <string name="tv_firstname_employee">Họ:</string>
    <string name="tv_lastname_employee">Tên:</string>
    <string name="tv_factory_employee">Phân xưởng:</string>
    <string name="name_layout_employee">DANH SÁCH CÔNG NHÂN</string>

    <string name="name_layout_product">Danh sách sản phẩm</string>
    <string name="tv_id_product">Mã sản phẩm:</string>
    <string name="tv_name_product">Tên sản phẩm:</string>
    <string name="tv_price_product">Đơn giá:</string>
    <string name="name_layout_add_product">Thêm sản phẩm</string>
    <string name="name_layout_edit_product">Sửa sản phẩm</string>

    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="list_employee_menu">Danh sách công nhân</string>
    <string name="update_employee_menu">Cập nhật thông công nhân</string>
    <string name="add_employee_menu">Thêm công nhân</string>
    <string name="back_home_menu">Quay về trang chủ</string>

    <string name="tv_sign_up">Đăng ký</string>
    <string name="tv_sign_in">Đăng nhập</string>
    <string name="tv_username">Tên đăng nhập</string>
    <string name="tv_passwd">Mật khẩu</string>
    <string name="thongKe">Thống kê</string>
    <string name="account">Quản Lý Tài Khoản</string>
    <string name="tv_id_account">Mã tài khoản</string>
    <string name="profile">Thông tin cá nhân</string>
    
    
     <string name="tv_sign_up">Đăng ký</string>
    <string name="tv_sign_in">Đăng nhập</string>
    <string name="tv_username">Tên đăng nhập</string>
    <string name="tv_passwd">Mật khẩu</string>
    <string name="thongKe">Thống kê</string>
    <string name="account">Quản Lý Tài Khoản</string>
    <string name="tv_id_account">Mã tài khoản</string>

    <string name="list_timekeeping_menu">Danh sách Chấm Công</string>
    <string name="update_timekeeping_menu">Cập nhật thông tin chấm công</string>
    <string name="add_timekeeping_menu">Thêm Chấm Công</string>
</resources>
