<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/a"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_marginTop="90sp"
        android:id="@+id/txtText1"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#DB0EFF"
        android:text="@string/tv_sign_in"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </TextView>
    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/txtUsername"
        android:drawableLeft="@drawable/ic_username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/tv_username"
        android:textSize="24sp">
    </EditText>
    <EditText
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:inputType="textPassword"
        android:id="@+id/txtPassword"
        android:drawableLeft="@drawable/ic_pass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/tv_passwd"
        android:textSize="24sp">
    </EditText>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnlogin"
            android:background="@drawable/custom_button"
            android:layout_margin="30dp"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_sign_in"

            android:textSize="30sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="Chưa có tài khoản ?"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <Button
            android:id="@+id/btnSignUp"
            android:text="@string/tv_sign_up"
            android:background="@drawable/custom_button"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>

