<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/header"
        android:orientation="vertical"
        android:background="@drawable/header"
        android:layout_height="170dp">

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:text="@string/tv_sign_up"
            android:textStyle="bold"
            android:textSize="45dp"
            android:fontFamily="cursive"
            android:textColor="@android:color/white"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:padding="15dp"
        android:layout_below="@+id/header"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/tv_username"
            android:inputType="text"
            android:textSize="24dp"
            android:id="@+id/edSignUp_Username"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:hint="@string/tv_passwd"
            android:inputType="textPassword"
            android:textSize="24dp"
            android:id="@+id/edSignUp_Passwd"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:hint="ID công nhân"
            android:inputType="textPassword"
            android:textSize="24dp"
            android:id="@+id/edSignUp_IdEmployee"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp_SignUp"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/tv_sign_up"
            android:textSize="30sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="Đã có tài khoản ?"
                android:textSize="20sp"
                android:layout_marginLeft="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignUp_Login"
                android:layout_width="123dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_button"
                android:textColor="@color/white"
                android:text="@string/tv_sign_in"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>

