<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="horizontal">-->
<!--        <Button-->
<!--            android:text="Thông tin"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/btnInfo"-->
<!--            style="@style/style4tvLabel"/>-->
<!--        <Button-->
<!--            android:text="Mật khẩu"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:id="@+id/btnAcc"-->
<!--            style="@style/style4tvLabel"/>-->
<!--    </LinearLayout>-->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp">
        <TextView
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/tv_id_employee"
            style="@style/style4tvLabel"/>
        <EditText
            android:layout_row="0"
            android:layout_column="1"
            android:id="@+id/id"
            android:layout_height="wrap_content"
            style="@style/style4edInput"
            android:layout_width="match_parent"
            android:editable="false"/>

        <TextView
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/tv_firstname_employee"
            style="@style/style4tvLabel"/>
        <EditText
            android:layout_row="1"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/firstname"
            style="@style/style4edInput"/>

        <TextView
            android:layout_row="2"
            android:layout_column="0"
            android:text="@string/tv_lastname_employee"
            style="@style/style4tvLabel"/>
        <EditText
            android:layout_row="2"
            android:layout_column="1"
            android:id="@+id/lastname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/style4edInput"/>

        <TextView
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/tv_factory_employee"
            style="@style/style4tvLabel"/>
        <EditText
            android:layout_row="3"
            android:layout_column="1"
            android:id="@+id/factory"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/style4edInput"/>

        <Button
            android:layout_row="4"
            android:layout_column="1"
            android:text="Lưu"
            android:id="@+id/btn_save"/>

    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>