<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradient_listview_background"
    android:orientation="horizontal">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_weight="3"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/baloo_bhaina"
                android:text="ID"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvID"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="9"
                android:fontFamily="@font/baloo_bhaina"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/baloo_bhaina"
                android:text="@string/tv_username"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIdUsername"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="9"
                android:fontFamily="@font/baloo_bhaina"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/baloo_bhaina"
                android:text="@string/tv_passwd"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvPasswd"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="9"
                android:fontFamily="@font/baloo_bhaina"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/baloo_bhaina"
                android:text="@string/tv_id_employee"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIDEmployee"
                android:layout_width="0dp"
                android:layout_height="30sp"
                android:layout_weight="9"
                android:fontFamily="@font/baloo_bhaina"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivEditAccount"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:layout_marginRight="5dp"
            app:tint="#E6CE39"
            android:src="@drawable/ic_baseline_edit_24" />

        <ImageView
            android:id="@+id/ivRemoveAccount"
            android:layout_width="30sp"
            android:layout_height="30sp"
            app:tint="#FF0000"
            android:src="@drawable/ic_baseline_remove_circle_outline_24" />
    </LinearLayout>

</LinearLayout>
